--- a/ms_gestion_Dev.properties
+++ b/ms_gestion_Dev.properties
@@ -1,1 +1,3 @@
 Gestion.property= Gestion profile Desarrollos
+spring.datasource.url=jdbc:postgresql://localhost:5432/msGestion
+spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
