--- a/ms_gestion_Dev.properties
+++ b/ms_gestion_Dev.properties
@@ -1,3 +1,3 @@
-Gestion.property= Gestion profile Desarrollos
+Gestion.property= Gestion profile Desarrollo
 spring.datasource.url=jdbc:postgresql://localhost:5432/msGestion
 spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
