--- a/ms_gestion_Prod.properties
+++ b/ms_gestion_Prod.properties
@@ -1,1 +1,3 @@
 Gestion.property= Producto Profile producciones
+spring.datasource.url=jdbc:postgresql://localhost:5432/msGestion
+spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
