--- a/ms_productoMicroservicioProd.properties
+++ b/ms_productoMicroservicioProd.properties
@@ -1,1 +1,3 @@
 producto.property= Producto profile Produccion
+spring.datasource.url=jdbc:postgresql://localhost:5432/msGestion
+spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
