--- a/ms_productoMicroserviciosDev.properties
+++ b/ms_productoMicroserviciosDev.properties
@@ -1,3 +1,2 @@
 producto.property= Producto Profile Desarollo
-spring.datasource.url=jdbc:postgresql://localhost:5432/msGestion
-spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+spring.data.mongodb.uri=mongodb://localhost:27017/productosDB
