--- a/ms_productoMicroserviciosDev.properties
+++ b/ms_productoMicroserviciosDev.properties
@@ -1,2 +1,2 @@
 producto.property= Producto Profile Desarollo
-spring.data.mongodb.uri=mongodb://localhost:27017/productosDB
+#spring.data.mongodb.uri=mongodb://localhost:27017/productosDB
