--- a/ms_productoMicroservicioProd.properties
+++ b/ms_productoMicroservicioProd.properties
@@ -1,2 +1,2 @@
 producto.property= Producto profile Produccion
-#spring.data.mongodb.uri=mongodb://localhost:27017/productosDB
+spring.data.mongodb.uri=mongodb://localhost:27017/productosDB
