--- a/ms_gestion_Dev.properties
+++ b/ms_gestion_Dev.properties
@@ -1,3 +1,3 @@
-Gestion.property= Producto Profile desarrollo
-spring.datasource.url=jdbc:postgresql://localhost:5432/msgestion
-spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+#Gestion.property= Producto Profile desarrollo
+#spring.datasource.url=jdbc:postgresql://localhost:5432/msgestion
+#spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
