--- a/ms_gestion_Prod.properties
+++ b/ms_gestion_Prod.properties
@@ -1,3 +1,3 @@
-Gestion.property= Producto Profile Produccion
+Gestion.property= Producto Profile Producciones
 spring.datasource.url=jdbc:postgresql://localhost:5432/msGestiongiss
 spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
